# comcom64

./: .travis.yml  Makefile  Makefile.win  README.md  asm.S  asm.h  build.sh  ci_build.sh  ci_prereq.sh  ci_test.sh  ci_test_prereq.sh  cmdbuf.c  cmdbuf.h  comcom32.spec  comcom32.spec.rpkg  comcom64.spec.rpkg  command.c  command.h  configure  configure.meson  description-pak  djstubify  dosemu2-stubify  fmemcpy.c  fmemcpy.h  index.html  int23.S  makefile  memmem.c  meson.build  plt.S  thunks_c.c  thunks_c.h  version.c
.github/workflows/: ci-build.yml
32/: Makefile  asm_inc.h  glob_inc.h  makefile
debian/: changelog  comcom32.install  comcom64.install  control  copyright  rules
djgpp/: findclos.c  findclos.h  fmemcpy.c  makefile  memmem.h
files/: README.md
parsers/: makefile  thunk_gen.y
src/: Makefile  ae0x.c  ae0x.h  asm.S  asm.h  asm.inc  clip.c  clip.h  cmdbuf.c  cmdbuf.h  command.c  command.h  compl.c  compl.h  configure  djansi.c  djansi.h  djstubify  djterm.c  djterm.h  env.c  env.h  fmemcpy.h  glob_asm.h  int0.S  int21.S  int21_next.S  int23.S  int75.S  link.sh  makefile  makefile.inc  meson.build  mouse.c  ms.S  ms.c  ms.h  plt.S  psp.c  psp.h  (+9 more)
src/32/: configure  makefile
src/parsers/: parse_decls.sh  tg_params.h
subprojects/: thunk_gen
tests/: test_invariant_cmdbuf.c
